--- a/CSS/Seletores/index-formularios.html
+++ b/CSS/Seletores/index-formularios.html
@@ -46,6 +46,7 @@
                 <label>
                     <input class="radio" type="radio" name="lembra" id="nao">Não
                 </label>
+                <input type="hidden" name="hidden" value="">
             </div>
         </fieldset>
     </form>
