--- a/Bootstrap/Projetos/Spotify/index.html
+++ b/Bootstrap/Projetos/Spotify/index.html
@@ -64,13 +64,35 @@
     <div class="container align-self-center"> 
       <div class="row">
         <div class="col-md-12 capa">
-          <h1>Música para todos</h1>
-          <a href="index.html" class="btn btn-lg btn-custom btn-roxo">
-            Aproveite o Spotify free
-          </a>
-          <a href="index.html" class="btn btn-lg btn-custom btn-branco">
-            Obter Spotify premium
-          </a>
+
+          <div id="carousel-spotify" class="carousel slide" data-ride="carousel"><!-- carousel -->
+            <div class="carousel-inner"><!-- Inner -->
+              <div class="carousel-item active">
+                <h1>Música para todos</h1>
+                <a href="index.html" class="btn btn-lg btn-custom btn-roxo">
+                  Aproveite o Spotify free
+                </a>
+                <a href="index.html" class="btn btn-lg btn-custom btn-branco">
+                  Obter Spotify premium
+                </a>
+              </div>
+
+              <div class="carousel-item">
+                <h1>As melhores rádos</h1>
+                <a href="index.html" class="btn btn-lg btn-custom btn-branco">
+                  <i class="fas fa-music"></i> Ouça agora
+                </a>
+              </div>
+            </div><!-- /inner -->
+
+            <!-- controles -->
+            <a href="#carousel-spotify" class="carousel-control-prev" data-slide="prev">
+              <i class="fas fa-angle-left fa-3x"></i>
+            </a>
+            <a href="#carousel-spotify" class="carousel-control-next" data-slide="next">
+              <i class="fas fa-angle-right fa-3x"></i>
+            </a>
+          </div><!-- /crousel -->
         </div>
       </div><!--FIM row-->
     </div> <!--FIM cont-->
