--- a/JavaScript/dom_manipulando_valores.html
+++ b/JavaScript/dom_manipulando_valores.html
@@ -9,11 +9,29 @@
     <script>
         function distribuiCaracter(){
           var caracter =  document.getElementById('entrada').value
+         // debugger para debugar em tempo real
           //limpar o campo de digitação
             document.getElementById('entrada').value = ''
 
-            debugger
-            //switch(caracter)
+            //limpa espaços
+            caracter.trim()
+
+            switch(caracter){
+            case '0':
+            case '1':
+            case '2':
+            case '3':
+            case '4':
+            case '5':
+            case '6':
+            case '7':
+            case '8':
+            case '9':
+                document.getElementById('numeros').value += caracter
+                break;
+            default:
+                document.getElementById('letras').value += caracter
+            }
         }
 
     </script>
@@ -28,9 +46,9 @@
 
     <hr>
     <span>Letras:</span>
-    <input type="text" disabled="disabled">
+    <input type="text" disabled="disabled" id="letras">
     <span>Numeros:</span>
-    <input type="text" disabled="disabled">
+    <input type="text" disabled="disabled" id="numeros">
 
 </body>
 
